set(Sources
    Main.cc
    Lox.cc
    Token.cc
    Scanner.cc
    AstPrinter.cc
    Parser.cc
    Object.cc
    Interpreter.cc
    Environment.cc
    )

set(Headers
    Lox.h
    ResultCode.h
    TokenType.h
    Token.h
    Scanner.h
    Expr.h
    Stmt.h
    AstPrinter.h
    Parser.h
    Object.h
    Interpreter.h
    RuntimeError.h
    Environment.h
    Callable.hpp
    Function.hpp
    )

add_executable(
    Lox
    ${Headers}
    ${Sources}
    )
