set(Sources
    Main.cc
    Lox.cc
    Token.cc
    Scanner.cc
    AstPrinter.cc
    Parser.cc
    Object.cc
    Interpreter.cc
    Environment.cc
    LoxFunction.cpp
    Resolver.cpp
    )

set(Headers
    Lox.h
    TokenType.h
    Token.h
    Scanner.h
    Expr.h
    Stmt.h
    AstPrinter.h
    Parser.h
    Object.h
    Interpreter.h
    RuntimeError.h
    Environment.h
    Callable.hpp
    LoxFunction.hpp
    LoxReturn.hpp
    Resolver.hpp
    )

add_executable(
    Lox
    ${Headers}
    ${Sources}
    )
